--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -31,7 +31,7 @@
                                             <div class="btn-group" style="width: 100%;" ngbDropdown>
                                                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-disable" style="
                                                 width: 100%;
-                                                text-align: left;" data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_cuerpo ? 'CUERPO LEGAL' : filtro_cuerpo }}</button>    
+                                                text-align: left;" data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_cuerpo ? 'CUERPO LEGAL' : filtro_cuerpo +' | '+filtro_cuerpoTitulo }}</button>    
                                                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
                                                 <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                                     <a class="dropdown-item" [ngClass]="!filtro_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro()">Todos</a>
@@ -43,7 +43,7 @@
                                                     </ng-container>-->
                                                     <ng-container *ngFor="let g of lista_cuerpos;">
                                                         
-                                                        <a class="dropdown-item" [ngClass]="filtro_cuerpo && filtro_cuerpo == g.cuerpoLegal ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro(g.cuerpoLegal,g.normaId)">{{g.cuerpoLegal}}</a>
+                                                        <a class="dropdown-item" [ngClass]="filtro_cuerpo && filtro_cuerpo == g.cuerpoLegal+' | '+g.tituloNorma ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro(g.cuerpoLegal,g.normaId, g.tituloNorma)">{{g.cuerpoLegal}} | {{g.tituloNorma}}</a>
                 
                                                         </ng-container>
                                                 </div>
