--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -74,6 +74,16 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
+                                                                
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
+                                                                    <div class="row text-muted text-center">
+                                                                        <div class="col-12 border-end border-end-dashed">
+                                                                            <h5 class="mb-1" style="color: #405189;"><b>{{ev.id.toString().padStart(6,"EV-000")}}</b></h5>
+                                                                            <p class="text-muted mb-0">Identificador</p>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
                                                                 <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
@@ -92,7 +102,7 @@
                                                                     </div>
                                                                 </div>
                                                                 
-                                                                <div class="col-lg-4 col" (click)="goEvaluation(ev.id)">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1"style="color: #405189;"><b>{{ev.evaluador.nombre}} {{ev.evaluador.apellido ? ev.evaluador.apellido : ''}}</b></h5>
@@ -112,10 +122,12 @@
                                                                     <span class="badge" [ngClass]="{'text-bg-success': ev.fechaFinalizacion, 'text-bg-warning': !ev.fechaFinalizacion}">{{ev.fechaFinalizacion ? 'Finalizada' : 'En proceso'}}</span>
                                                                 </div>
                                                                 <div class="col-lg-1 col text-center">
+                                                                    
                                                                     <span [ngClass]="ev.active ? 'text-success' : ''" 
                                                                     [style.cursor]="'pointer'" (click)="homologar(homoContent, ev)">
                                                                     <i class="ri-git-merge-fill"></i>
                                                                     </span>
+                                                                    
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -167,6 +179,17 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
+                                                                
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(au.id)">
+                                                                    <div class="row text-muted text-center">
+                                                                        <div class="col-12 border-end border-end-dashed">
+                                                                            <h5 class="mb-1" style="color: #405189;"><b>{{ au.auditoria_nombre }}</b></h5>
+                                                                            
+                                                                            <p class="text-muted mb-0">Auditoria</p>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
                                                                 <div class="col-lg-2 col" (click)="goEvaluation(au.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
@@ -187,17 +210,8 @@
                                                                 <div class="col-lg-2 col" (click)="goEvaluation(au.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1">{{ au.auditor ? au.auditor : '-' }}</h5>
+                                                                            <h5 class="mb-1" style="color: #405189;"><b>{{ au.auditor ? au.auditor : '-' }}</b></h5>
                                                                             <p class="text-muted mb-0">Auditor</p>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                
-                                                                <div class="col-lg-4 col" (click)="goEvaluation(au.id)">
-                                                                    <div class="row text-muted text-center">
-                                                                        <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{au.empresa}}</b></h5>
-                                                                            <p class="text-muted mb-0">Entidad Auditora</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -206,6 +220,15 @@
                                                                     <div class="progress progress-xl">
                                                                         <div class="progress-bar" 
                                                                         [ngClass]="{'bg-danger': au.cumplimiento > 0 && au.cumplimiento < 25, 'bg-warning': au.cumplimiento > 25 && au.cumplimiento < 75, 'bg-success': au.cumplimiento > 75 }" role="progressbar" [style]="au.cumplimiento > 0 ? 'width:'+au.cumplimiento+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{au.cumplimiento}}%</div>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(au.id)">
+                                                                    <div class="row text-muted text-center">
+                                                                        <div class="col-12 border-end border-end-dashed">
+                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{au.empresa}}</b></h5>
+                                                                            <p class="text-muted mb-0">Entidad Auditora</p>
+                                                                        </div>
                                                                     </div>
                                                                 </div>
 
