--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -111,7 +111,7 @@
                     <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cuerpo Legal" data-choices data-choices-search-false id="choices-priority-input2" (change)="selectCuerpo($event)">
                                 <option value="" selected>Seleccione Cuerpo legal</option>
                                 <option value="{{c.cuerpoLegal}}" *ngFor="let c of cuerpos_articulos; let i = index;">
-                                    {{c.cuerpoLegal}}
+                                    {{c.cuerpoLegal}} | {{c.tituloNorma}}
                                 </option>
                     </select>
                     <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
@@ -147,10 +147,10 @@
                                                         
                                                         <div class="col-lg-2 col text-center" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
                                                             <h6 style="color: #405189;">{{s.articulo}}</h6>
-                                                            <span class="badge" [ngClass]="{
+                                                            <span class="badge" style="min-width: 170px;" [ngClass]="{
                                                                 'text-bg-no-evaluado': s.project_article.articuloTipo == 'reporte','text-bg-primary': s.project_article.articuloTipo == 'permiso', 'text-bg-info': s.project_article.articuloTipo == 'monitoreo'}" *ngIf="s.project_article && s.project_article.articuloTipo">{{s.project_article.articuloTipo.toUpperCase() }}</span>
                                                         </div>
-                                                        <div class="col-lg-4 col" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
+                                                        <div class="col-lg-4 col" style="cursor: text;" *ngIf="s.proyectoId == project_id"><!--(click)="goEvaluation(s.id, s.evaluations)"-->
                                                             <!--class="team-profile-img"-->
                                                                 <p class="card-text mb-2 align-self-center"><!--[style]="s.descripcion && s.descripcion.length > 450 ? 'min-height: 60px;' : 'min-height: 80px;'"-->{{s.descripcion ? (s.descripcion.length > 450 ? formatArticle(s.descripcion, s.articuloId) : s.descripcion) : s.tipoParte}} 
                                                                     <small [ngClass]="!validateIdparte(s.articuloId) ? 'text-success' : 'text-success'" style="cursor: pointer;" *ngIf="s.descripcion && s.descripcion.length > 450 && !validatShow(s.articuloId)" (click)="showText(s.articuloId)"><b>Leer más</b></small>
@@ -172,7 +172,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-2 col text-center" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
-                                                            <span class="badge" [ngClass]="{
+                                                            <span class="badge" style="min-width: 170px;" [ngClass]="{
                                                                 'text-bg-no-evaluado': !s.evaluations.estado || s.evaluations.evaluationProyectId != idEvaluation,'text-bg-danger': (s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'NO CUMPLE'), 'text-bg-success': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE', 'text-bg-warning': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
                                                         </div>
                                                         <div class="col-lg-1 col text-center" *ngIf="s.proyectoId == project_id && !evaluations.auditoria">
@@ -210,7 +210,7 @@
                                     </div>-->
                                     <div class="card-body">
                                         
-                                        <h6 class="flex-grow-1 fw-semibold mb-0" style="color: #405189;">{{g.cuerpoLegal}}
+                                        <h6 class="flex-grow-1 fw-semibold mb-0" style="color: #405189;">{{g.cuerpoLegal}} | {{g.tituloNorma}}
                                             <!--<span class="float-end" style="font-size: 20px;cursor:pointer;"><i class=" ri-arrow-up-s-line" (click)="hideArticles(g.normaId)" *ngIf="!validateShowArticles(g.normaId)"></i></span>
                                             <span class="float-end" style="font-size: 20px;cursor:pointer;" (click)="showArticles(g.normaId)" *ngIf="validateShowArticles(g.normaId)"><i class=" ri-arrow-down-s-line"></i></span>-->
                                         </h6>                              
