--- a/src/app/pages/plans-work/plans-work-anality/assess/assess.component.html
+++ b/src/app/pages/plans-work/plans-work-anality/assess/assess.component.html
@@ -54,7 +54,7 @@
                             <div class="col-md-4">
                                 <div class="card-body">
                                     Adjuntar imagen o archivo de respaldo
-                                    <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" (success)="onFileSelectedEvaluation($event)"></dropzone>
+                                    <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ acceptedFiles: 'image/*,application/*' }" (success)="onFileSelectedEvaluation($event)"></dropzone>
                                 </div>
                             </div>
                             
