--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -31,7 +31,7 @@
                                             <div class="btn-group" style="width: 100%;" ngbDropdown>
                                                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-disable" style="
                                                 width: 100%;
-                                                text-align: left;" data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_cuerpo ? 'CUERPO LEGAL' : filtro_cuerpo +' | '+filtro_cuerpoTitulo }}</button>    
+                                                text-align: left;" data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_cuerpo ? 'CUERPO LEGAL' : filtro_cuerpo +' | '+(filtro_cuerpoTitulo.length > 60 ? filtro_cuerpoTitulo.substring(0, 60)+'...' : filtro_cuerpoTitulo) }}</button>    
                                                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
                                                 <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                                     <a class="dropdown-item" [ngClass]="!filtro_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro()">Todos</a>
@@ -43,7 +43,7 @@
                                                     </ng-container>-->
                                                     <ng-container *ngFor="let g of lista_cuerpos;">
                                                         
-                                                        <a class="dropdown-item" [ngClass]="filtro_cuerpo && filtro_cuerpo == g.cuerpoLegal+' | '+g.tituloNorma ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro(g.cuerpoLegal,g.normaId, g.tituloNorma)">{{g.cuerpoLegal}} | {{g.tituloNorma}}</a>
+                                                        <a class="dropdown-item" [ngClass]="filtro_cuerpo && filtro_cuerpo == g.cuerpoLegal+' | '+g.tituloNorma ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro(g.cuerpoLegal,g.normaId, g.tituloNorma)">{{g.cuerpoLegal}} | {{g.tituloNorma.length > 60 ? g.tituloNorma.substring(0, 60)+'...' : g.tituloNorma}}</a>
                 
                                                         </ng-container>
                                                 </div>
@@ -295,8 +295,11 @@
                                                             </div>
 
                                                             <div class="col-lg-2 col">
+                                                                <div class="row text-muted text-center">
                                                                 <div class="progress progress-xl">
                                                                     <div class="progress-bar" [ngClass]="{'bg-danger': v.avance > 0 && v.avance < 25, 'bg-warning': v.avance > 25 && v.avance < 75, 'bg-success': v.avance > 75 }" role="progressbar" [style]="v.avance > 0 ? 'width:'+(v.avance > 100 ? 100 : v.avance)+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{(v.avance > 100 ? 100 : v.avance)}}%</div>
+                                                                </div>
+                                                                <p class="text-muted mb-0">Cumplimiento</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -310,7 +313,7 @@
                                         <div class="list-group">
                                                       
                                             <div *ngIf="installations_group_filter.length > 0 && validIndexArea(installations_group_filter, s.nombre)">
-                                                <div style="background: #405189;padding: 5px;border-radius: 0.25rem;width: fit-content;">
+                                                <div style="background: #405189;padding: 5px;border-radius: 0.25rem;">
                                                     <h4 style="color: #fff;">{{s.nombre}}</h4>
                                                     <!--<p style="color: #fff;">{{s.descripcion}}</p>-->
                                                 </div><!--[ngClass]="{'sub-item': type == 1, 'sub-item2': type == 2}"-->
@@ -346,7 +349,7 @@
                                                 
                                     <div *ngIf="installations_group_filter.length > 0 && validIndexArea(installations_group_filter, td.nombre)">
                                         
-                                            <div style="background: #405189;padding: 5px;border-radius: 0.25rem;width: fit-content;">
+                                            <div style="background: #405189;padding: 5px;border-radius: 0.25rem;">
                                             <h4 style="color: #fff;">{{td.nombre}}</h4>
                                             <!--<p style="color: #fff;">{{td.descripcion}}</p>--> 
                                             </div>
