--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -64,7 +64,7 @@
                                             " data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !tipo_cuerpo ? 'Cumplimiento' : tipo_cuerpo }}</button>    
                                                 <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split ml-auto" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
                                                 <div class="dropdown-menu dropdown-menu-dark" style="width: 100%;" ngbDropdownMenu>
-                                                    <a class="dropdown-item" [ngClass]="!tipo_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectTipoCuerpo()">Todos</a>
+                                                    <a class="dropdown-item" [ngClass]="!tipo_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectTipoCuerpo()">TODOS</a>
                                                     
                                                     <ng-container *ngFor="let cum of lista_cumplimientos">
                                                         <a class="dropdown-item" [ngClass]="tipo_cuerpo && tipo_cuerpo == cum.cumplimiento ? 'active' : ''" href="javascript:void(0);" (click)="selectTipoCuerpo(cum.cumplimiento)">{{cum.cumplimiento}}</a>
